feat: 기물 이동 기능 구현